# tgdog

./: LICENSE  README.md  pyproject.toml
tgdog/: __init__.py  bot.py  core.py  exception_handler.py  messages.py  requirements.txt  users.py
tgdog/db/: __init__.py
tgdog/db/tables/: __init__.py  gui.py
tgdog/gui/: __init__.py  callback_query.py  constants.py  exceptions.py  mixins.py  registry.py  window.py
tgdog/gui/buttons/: __init__.py  base_button.py  check_box_button.py  mixins.py  simple_button.py  single_select_button.py
tgdog/gui/input_fields/: __init__.py
tgdog/gui/keyboards/: __init__.py  base_keyboard.py  grid_keyboard.py  simple_keyboard.py
tgdog/gui/tabs/: __init__.py  base_tab.py  date_time_selection_tab.py  mixins.py  number_selection_tab.py  tab.py
tgdog/gui/tabs/time_zone_selection_tab/: __init__.py  time_zones.py  utils.py
tgdog/gui/texts/: __init__.py  base_text.py
tgdog/helpers/: __init__.py  split_text.py  sqlalchemy_row_wrapper.py
tgdog/wrappers/: __init__.py  dispatcher.py  name_inflection.py
