[project]
name = "tgdog"
version = "0.0.1"
authors = [
  { name="Danstiv", email="danstiv@yandex.ru" },
]
description = "Pyrogram wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Danstiv/tgdog"
"Bug Tracker" = "https://github.com/Danstiv/tgdog/issues"
