[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgdog"
version = "0.0.1"
authors = [
  { name="Danstiv", email="danstiv@yandex.ru" },
]
description = "Pyrogram wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic==1.11.1",
    "python-dotenv==1.0.0",
    "pyrogram==2.0.106",
    "sqlalchemy==2.0.16",
    "tgcrypto==1.2.5",
]

[project.optional-dependencies]
optional = [
    "aiosqlite==0.19.0",
    "pymorphy3==1.2.0",
    "uvloop==0.17.0",
]

[project.urls]
"Homepage" = "https://github.com/Danstiv/tgdog"
"Bug Tracker" = "https://github.com/Danstiv/tgdog/issues"
